appId: com.basistheory.reactnativethreeds.example
---
- launchApp
- extendedWaitUntil:
    visible: 'Native 3DS ready'
    timeout: 60000
- assertVisible: 'Active strategy: ${STRATEGY}'
- tapOn:
    id: 'card-number-input'
- eraseText: 16
- inputText: '5204247750001471'
- hideKeyboard
- tapOn:
    id: 'checkout-button'
- extendedWaitUntil:
    visible: '${STRATEGY}: successful'
    timeout: 30000
- stopApp
